Actualización del portafolio 5

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Satner Portfolio</title>
+	<title>Mi Portfolio</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -57,7 +57,7 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hola</h3>
-							<h1 class="text-uppercase">Soy Javier Villadiego</h1>
+							<h1 class="text-uppercase">Soy <br> Javier Villadiego</h1>
 							<h5 class="text-uppercase">Ingeniero de Sistemas</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/"><span>Contratame</span></a>
@@ -89,11 +89,15 @@
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
 						<h2>Sobre mí</h2>
+
 						<p>
 							Ingeniero de Sistemas graduado de la Universidad de La Guajira. En 2021 realicé mi 
 							práctica empresarial en una de las grandes empresas mineras de Colombia, El Cerrejón, 
 							enfocándome en recopilar, analizar y presentar datos necesarios para la ejecución de 
-							proyectos e iniciativas de la empresa. Poseo conocimientos y habilidades sólidas en 
+							proyectos e iniciativas de la empresa. 
+							<br></p>
+							<p>
+							Poseo conocimientos y habilidades sólidas en 
 							tecnología y análisis de datos, que he aplicado para optimizar los procesos tecnológicos 
 							y mejorar la eficiencia operativa en mi trayectoria profesional.
 						</p>
@@ -102,7 +106,7 @@
 							procesos. Además, tengo experiencia trabajando en equipos multidisciplinarios, lo que 
 							me ha brindado una visión integral de la industria.
 						</p>
-						<a class="primary_btn" href="#"><span>Descargar Currículum</span></a>
+						<a class="primary_btn" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing"><span>Descargar Currículum</span></a>
 					</div>
 				</div>
 			</div>
@@ -369,7 +373,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Esta plantilla está basada por una plantilla de<a href="https://colorlib.com" target="_blank">Colorlib </a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Este portfolio está basado en una plantilla de <a href="https://colorlib.com" target="_blank">Colorlib </a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
