--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                             <i class="lnr lnr-envelope"></i>
                             <h6><a href="#">javiervilladiego7@gmail.com</a></h6>
                             <p> </p>                            <p> </p>
-
+bw
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,8 @@
             <div class="row footer_bottom justify-content-center">
                 <p class="col-lg-8 col-sm-12 footer-text">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
+Todos los derechos reservados | Portfolio basado en una plantilla dew <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
