--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
+
+
+  
 </head>
 
 <body>
@@ -26,7 +29,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand " href="index.html"><img class="logo_h" src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -37,9 +40,9 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
                             <li class="nav-item "><a class="nav-link" href="index.html">Inicio</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">Acerca de</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">Sobre mí</a></li>
 							<li class="nav-item"><a class="nav-link" href="services.html">Servicios</a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+							<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio</a></li>
 							<li class="nav-item active"><a class="nav-link" href="contact.html">Contacto</a></li>
 						</ul>
 					</div>
@@ -86,12 +89,12 @@
                             <i class="lnr lnr-envelope"></i>
                             <h6><a href="#">javiervilladiego7@gmail.com</a></h6>
                             <p> </p>                            <p> </p>
-bw
+
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                    <form class="row contact_form"  method="post" id="contactForm" novalidate="novalidate">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Introduzca su nombre">
@@ -116,15 +119,7 @@ bw
                     </form>
                 </div>
             </div>
-            <div id="mapBox" class="mapBox" 
-                data-lat="40.701083" 
-                data-lon="-74.1522848" 
-                data-zoom="13" 
-                data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                data-mlat="40.701083"
-                data-mlon="-74.1522848">
-            </div>
-        </div>
+            
     </section>
     <!--================Contact Area =================-->
         
@@ -135,16 +130,16 @@ bw
                 <div class="col-lg-12">
                     <div class="footer_top flex-column">
                         <div class="footer_logo">
-                            <a href="#">
-                                <img src="img/logo.png" alt="">
+                            <a href="index.html">
+                                <img class="logo_h" src="img/logo.png" alt="">
                             </a>
-                            <h4>Follow Me</h4>
+                            <h4>Sigueme</h4>
                         </div>
                         <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.facebook.com/javier.villadiego.79677"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/javiervilladie4"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://github.com/JavierVilladiego" target="_blank"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -174,8 +169,8 @@ Todos los derechos reservados | Portfolio basado en una plantilla dew <i class="
     <script src="js/jquery.ajaxchimp.min.js"></script>
     <script src="js/mail-script.js"></script>
     <!--gmaps Js-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-    <script src="js/gmaps.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE&callback=initMap"></script>
+  
     <script src="js/theme.js"></script>
 </body>
 
