--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand " href="index.html"><img class="logo_h" src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -37,9 +37,9 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Inicio</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">Acerca de</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">Sobre mí</a></li>
 							<li class="nav-item"><a class="nav-link" href="services.html">Servicios</a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+							<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
 						</ul>
 					</div>
@@ -60,8 +60,8 @@
 							<h1 class="text-uppercase">Soy <br> Javier Villadiego</h1>
 							<h5 class="text-uppercase">Ingeniero de Sistemas</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/"><span>Contratame</span></a>
-								<a class="primary_btn tr-bg" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing"><span>Obtener Currículum</span></a>
+								<a class="primary_btn" href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/" target="_blank"><span>Contratame</span></a>
+								<a class="primary_btn tr-bg" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing" target="_blank"><span>Obtener Currículum</span></a>
 							</div>
 						</div>
 					</div>
@@ -106,7 +106,7 @@
 							procesos. Además, tengo experiencia trabajando en equipos multidisciplinarios, lo que 
 							me ha brindado una visión integral de la industria.
 						</p>
-						<a class="primary_btn" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing"><span>Descargar Currículum</span></a>
+						<a class="primary_btn" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing" target="_blank"><span>Descargar Currículum</span></a>
 					</div>
 				</div>
 			</div>
@@ -356,16 +356,16 @@
 				<div class="col-lg-12">
 					<div class="footer_top flex-column">
 						<div class="footer_logo">
-							<a href="#">
-								<img src="img/logo.png" alt="">
+							<a href="index.html">
+								<img class="logo_h" src="img/logo.png" alt="">
 							</a>
 							<h4>Sigueme</h4>
 						</div>
 						<div class="footer_social">
-							<a href="https://www.facebook.com/javier.villadiego.79677"><i class="fa fa-facebook"></i></a>
-							<a href="https://twitter.com/javiervilladie4"><i class="fa fa-twitter"></i></a>
-							<a href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/"><i class="fa fa-linkedin"></i></a>
-
+							<a href="https://www.facebook.com/javier.villadiego.79677" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/javiervilladie4" target="_blank"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/JavierVilladiego" target="_blank"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 				</div>
