Actualización del portafolio 9

--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,14 @@
     <!--================Contact Area =================-->
     <section class="contact_area section_gap">
         <div class="container">
+            <div class="main_title">
+                <h2>Contáctame  </h2>
+                <p>Estoy emocionado por la oportunidad de trabajar en su empresa y poner mis habilidades en acción. <br>
+                    Si buscan compromiso, dedicación y resultados, ¡estoy listo para ser su próximo miembro clave!</p>
+            </div>
             <div class="row">
                 <div class="col-lg-3">
+                    
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
@@ -111,8 +117,9 @@
                                 <textarea class="form-control" name="message" id="message" rows="1" placeholder="Ingresar mensaje"></textarea>
                             </div>
                         </div>
-                        <div class="g-recaptcha" data-sitekey="6Lc8uWInAAAAAECztmrHuOpYeuT_ALUn33BddavL"></div>
+                        
                         <div class="col-md-12 text-right">
+                            <div class="g-recaptcha" data-sitekey="6Lc8uWInAAAAAECztmrHuOpYeuT_ALUn33BddavL" ></div>
                             <button type="submit" value="submit" id="submit" class="primary_btn">
                                 <span>ENVIAR MENSAJE</span>
                             </button>
