--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<h3 class="text-uppercase">Hola</h3>
 							<h1 class="text-uppercase">Soy <br> Javier Villadiego</h1>
 							<h5 class="text-uppercase">Ingeniero de Sistemas</h5>
-							<div class="d-flex align-items-center ">
+							<div class="d-flex align-items-center primary_flex">
 								<a class="primary_btn" href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/" target="_blank"><span>Contratame</span></a>
 								<a class="primary_btn tr-bg" href="https://drive.google.com/file/d/1Xcaxz7D2E_zSueaeZ-7FtmXV9cZhrZd0/view?usp=sharing" target="_blank"><span>Obtener Currículum</span></a>
 							</div>
