--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -54,11 +54,10 @@
         <div class="banner_inner d-flex align-items-center">
             <div class="container">
                 <div class="banner_content text-center">
-                    <h2>Portfolio Details</h2>
+                    <h2>Portfolio</h2>
                     <div class="page_link">
-                        <a href="index.html">Home</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="portfolio-details.html">Portfolio Details</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="portfolio-details.html">Portfolio</a>
                     </div>
                 </div>
             </div>
@@ -142,16 +141,16 @@
                 <div class="col-lg-12">
                     <div class="footer_top flex-column">
                         <div class="footer_logo">
-                            <a href="#">
-                                <img src="img/logo.png" alt="">
+							<a href="index.html">
+								<img class="logo_h" src="img/logo.png" alt="">
                             </a>
-                            <h4>Follow Me</h4>
+                            <h4>Sigueme</h4>
                         </div>
                         <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.facebook.com/javier.villadiego.79677" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/javiervilladie4" target="_blank"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/javier-david-villadiego-amaya-289424135/" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/JavierVilladiego" target="_blank"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -159,8 +158,8 @@
             <div class="row footer_bottom justify-content-center">
                 <p class="col-lg-8 col-sm-12 footer-text">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> <br>
+                    Todos los derechos reservados | Portfolio basado en una plantilla de <a href="https://colorlib.com" target="_blank">Colorlib </a><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
     </footer>
